Moving dynamo maps to a setup which can be powered by apache httpclient. This allows for advanced pooling functionality